--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "rest-express",
   "version": "1.0.0",
+  "homepage": "https://Nom3o.github.io/Mezgeb/",
+
   "type": "module",
   "license": "MIT",
-  "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
-    "check": "tsc",
-    "db:push": "drizzle-kit push"
-  },
+"scripts": {
+  "dev": "NODE_ENV=development tsx server/index.ts",
+  "build:frontend": "vite build",
+  "build:backend": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist-server",
+  "build": "npm run build:frontend && npm run build:backend",
+  "start": "NODE_ENV=production node dist-server/index.js",
+  "check": "tsc",
+  "db:push": "drizzle-kit push",
+  "predeploy": "npm run build:frontend",
+  "deploy": "gh-pages -d dist"
+},
+
+
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
@@ -94,6 +102,7 @@
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.31.4",
     "esbuild": "^0.25.0",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
